# NablaGL

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: release.yml
assets/Models/Enemy/: thwomp.mtl
assets/Models/Level/: WF.mtl
assets/Models/Star/: star.mtl
assets/Models/Text/: environment_mapping.mtl  lambert_shading.mtl
assets/Shaders/: billboard.fs  billboard.vs  blinn_phong.fs  envmap.fs  lambert.fs  model.vs  phong.fs  skybox.fs  skybox.vs  texcoord.fs  unlit.fs
source/: Camera.cpp  Camera.h  DragonData.h  GUI.cpp  GUI.h  LightSource.cpp  LightSource.h  Main.cpp  Mesh.cpp  Mesh.h  MeshOBJ.cpp  MeshOBJ.h  SceneObject.cpp  SceneObject.h  Skybox.cpp  Skybox.h
source/utils/: GLShader.cpp  GLShader.h  Matrix.cpp  Matrix.h  Vertex.cpp  Vertex.h
source/utils/imgui/: imgui_impl_opengl3.cpp
